fix: fixed super-heading letter spacing

--- a/assets/scss/_typography.scss
+++ b/assets/scss/_typography.scss
@@ -8,6 +8,7 @@
     line-height: 1;
     width: fit-content;
     height: fit-content;
+    letter-spacing: 1px;
 }
 .heading{
     font-size: $fs-title;
